--- a/_quarto.yml
+++ b/_quarto.yml
@@ -26,6 +26,6 @@ format:
     code-fold: true
     highlight-style: github
     css: styles.css
-    bibliography: bibliography/references.bib
+    bibliography: references.bib
     citation-link: true
     link-citations: true 
