--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,11 +12,22 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v3
 
+      - name: Set up R
+        uses: r-lib/actions/setup-r@v2
+        with:
+          r-version: '4.3.0'
+
+      - name: Install TinyTeX
+        uses: r-lib/actions/setup-tinytex@v2
+
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
+
+      - name: Install R Dependencies
+        run: |
+          install.packages(c('rmarkdown', 'knitr', 'tidyverse', 'DT'))
 
       - name: Render and Publish
         uses: quarto-dev/quarto-actions/publish@v2
         with:
-          target: gh-pages
-          execute: false 
+          target: gh-pages 
