--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Install R Dependencies
         run: |
-          install.packages(c('rmarkdown', 'knitr', 'tidyverse', 'DT'))
+          Rscript -e 'install.packages(c("rmarkdown", "knitr", "tidyverse", "DT"), repos="https://cloud.r-project.org/")'
 
       - name: Render and Publish
         uses: quarto-dev/quarto-actions/publish@v2
