--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,7 +2,12 @@ name: Publish Quarto Website
 
 on:
   push:
-    branches: main
+    branches: 
+      - main
+      - 'projects/*'
+      - 'blog/*'
+      - 'bibliography/*'
+      - 'fix/*'
   workflow_dispatch:
 
 jobs:
